<resources>
    <string name="app_name">Social Login</string>

    <string name="main_title">Social Login Example</string>
    <string name="main_kakao_login_text">카카오 로그인</string>
    <string name="main_google_login_text">구글 로그인</string>
    <string name="main_naver_login_text">네이버 로그인</string>
    <string name="main_local_login_text">로컬 로그인</string>

    <string name="result_login_type">Login Type: %s</string>

    <string name="result_kakao_access_token">AccessToken: %s</string>
    <string name="result_kakao_access_token_expires">Access Token Expires: %s</string>
    <string name="result_kakao_refresh_token">Refresh Token: %s</string>
    <string name="result_kakao_refresh_token_expires">Refresh Token Expires: %s</string>
    <string name="result_kakao_id_token">Id Token: %s</string>
    <string name="result_kakao_agrees">동의항목: %s</string>

    <string name="result_naver_access_token">AccessToken: %s</string>
    <string name="result_naver_refresh_token">RefreshToken: %s</string>
    <string name="result_naver_token_expires">Expires: %s</string>
    <string name="result_naver_token_type">Type: %s</string>
    <string name="result_naver_state">State: %s</string>

    <string name="result_google_id_token">IdToken: %s</string>
    <string name="result_google_id">Id: %s</string>
    <string name="result_google_name">Name: %s</string>
</resources>